--- a/roles/seafile/tasks/main.yml
+++ b/roles/seafile/tasks/main.yml
@@ -1,57 +1,60 @@
 ---
 - name: Create the necessary Seafile folder
-  file:
+  ansible.builtin.file:
     path: "{{ docker_dir }}/{{ seafile_container_name }}/{{ item }}"
     state: directory
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0755"
   loop:
-    - "db-data"
-    - "seafile-data"
-    - "seahub-avatars"
-    - "seahub-custom"
+    - "mysql"
+    - "data"
 
-- name: Copy compose.yml and .env
+- name: Copy compose files
   ansible.builtin.template:
-    src: "{{ item[0] }}"
-    dest: "{{ docker_dir }}/{{ seafile_container_name }}/{{ item[1] }}"
+    src: "{{ item }}.j2"
+    dest: "{{ docker_dir }}/{{ seafile_container_name }}/{{ item }}"
     owner: "{{ guid }}"
     group: "{{ guid }}"
     mode: "0644"
   loop:
-    - ["compose.yml.j2", "seafile-server.yml"]
-
-- name: Create docker network
-  ansible.builtin.include_tasks:
-    file: network.yml
+    - .env
+    - seafile-server.yml
+    - notification-server.yml
 
 - name: Create and start services
   community.docker.docker_compose_v2:
     project_src: "{{ docker_dir }}/{{ seafile_container_name }}"
     files:
       - seafile-server.yml
+      - notification-server.yml
 
-- name: Pause for 20 seconds and let Seafile creating configuration files
-  ansible.builtin.pause:
-    seconds: 20
+- name: Create docker network
+  ansible.builtin.include_tasks:
+    file: network.yml
+
+- name: Pause until Seafile has created configuration files
+  become: true
+  ansible.builtin.wait_for:
+    path: "{{ docker_dir }}/{{ seafile_container_name }}/data/seafile/conf/seahub_settings.py"
 
 - name: Fix CSRF  # Not sure why it shows as http://https://seafile.mydomain.com
-  become: true
   ansible.builtin.lineinfile:
-    path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/seahub_settings.py"
+    path: "{{ docker_dir }}/{{ seafile_container_name }}/data/seafile/conf/seahub_settings.py"
     search_string: "{{ item[0] }}"
-    line: "{{ item[1] }}"
+    line: "{{ item[0] }} = {{ item[1] }}"
   loop:
-    - ["SERVICE_URL = ", "SERVICE_URL = '{{ seafile_dashboard_url }}'"]
-    - ["CSRF_TRUSTED_ORIGINS = ", "CSRF_TRUSTED_ORIGINS = ['{{ seafile_dashboard_url }}']"]
+    # - ["ALLOWED_HOSTS", "'.{{ site_url }}'"]  # `seahub.sh start` crashes
+    - ["CSRF_COOKIE_SECURE", "True"]
+    - ["CSRF_COOKIE_SAMESITE", "'Strict'"]
+    - ["CSRF_TRUSTED_ORIGINS", "['{{ seafile_dashboard_url }}']"]
 
 # - name: Allow connections from 0.0.0.0
-#  become: true
-#  ansible.builtin.lineinfile:
-#    path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/gunicorn.conf.py"
-#    search_string: "bind = "
-#    line: "bind = '0.0.0.0:8000'"
+#   become: true
+#   ansible.builtin.lineinfile:
+#     path: "{{ docker_dir }}/{{ seafile_container_name }}/data/seafile/conf/gunicorn.conf.py"
+#     search_string: "bind = "
+#     line: "bind = '0.0.0.0:8000'"
 
 - name: Install ONLYOFFICE for document integration
   when: '"onlyoffice" in containers'
@@ -64,7 +67,7 @@
         onlyoffice_document_server_domain: "https://{{ seafile_subdomain }}.{{ site_url }}"
     - name: Edit Seahub configuration for OnlyOffice
       ansible.builtin.lineinfile:
-        path: "{{ docker_dir }}/{{ seafile_container_name }}/seafile-data/seafile/conf/seahub_settings.py"
+        path: "{{ docker_dir }}/{{ seafile_container_name }}/data/seafile/conf/seahub_settings.py"
         search_string: "{{ item[0] }} = "
         line: "{{ item[0] }} = {{ item[1] }}"
       loop:
@@ -73,6 +76,7 @@
         - ["ONLYOFFICE_FILE_EXTENSION", "('doc', 'docx', 'ppt', 'pptx', 'xls', 'xlsx', 'odt', 'fodt', 'odp', 'fodp', 'ods', 'fods', 'csv', 'ppsx', 'pps')"]
         - ["ONLYOFFICE_EDIT_FILE_EXTENSION", "('docx', 'pptx', 'xlsx')"]
         - ["ONLYOFFICE_JWT_SECRET", "'{{ onlyoffice_jwt_secret }}'"]
+        - ["OFFICE_PREVIEW_MAX_SIZE", "30 * 1024 * 1024  # preview size, 30 MB"]
 
 - name: Restart Seafile container to apply above changes
   community.docker.docker_container:
