--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,10 +1,24 @@
 ---
 repos:
   - repo: https://github.com/ansible/ansible-lint
-    rev: v24.2.0
+    rev: v26.1.1
     hooks:
       - id: ansible-lint
-        args: [--offline]
-        files: \.(yaml|yml)$
+        name: ansible-lint
+        description: This hook runs ansible-lint.
+        entry: python3 -m ansiblelint -v --force-color
+        language: python
+        # version is needed to avoid accidental use of python3.10 on some platforms
+        # as this is not supported by recent versions of ansible-lint and ansible-core
+        language_version: python3.13
+        # do not pass files to ansible-lint, see:
+        # https://github.com/ansible/ansible-lint/issues/611
+        pass_filenames: false
+        always_run: true
         additional_dependencies:
-          - ansible
+          # https://github.com/pre-commit/pre-commit/issues/1526
+          # If you want to use a specific version of ansible-core or ansible, feel
+          # free to override `additional_dependencies` in your own hook config
+          # file as we only support latest stable version of ansible-core when used
+          # as an action.
+          - ansible-core>=2.19.0
