--- a/catafalco.yml
+++ b/catafalco.yml
@@ -1,26 +1,13 @@
 ---
 # Tasks and roles for all hosts
 
-#- name: Set SSH correctly before executing other roles
-#  hosts: catafalco
-#  gather_facts: false
-#  pre_tasks:
-#    #    - name: Juggle with SSH with default and custom port
-#    #      import_tasks: tasks/ssh_juggle_port.yml
-#    #      tags:
-#    #        - port
-#
-#    - name: Set SSH correctly before executing other roles
-#      import_tasks: tasks/ssh.yml
-#      tags:
-#        - port
 # Play 1: Bootstrap using 'su' to root
 # => ansible-playbook catafalco.yml --tag bootstrap -J -K --ask-pass -v
 - name: Bootstrap
   hosts: catafalco
   become: true
   become_user: root
-  become_method: su
+  become_method: ansible.builtin.su
   tags:
     - bootstrap
     - never
@@ -33,7 +20,7 @@
 - name: Main playbook
   hosts: catafalco
   become: true
-  become_method: sudo
+  become_method: ansible.builtin.sudo
 
   gather_facts: false
   pre_tasks:
@@ -331,4 +318,9 @@
     - role: dawarich
       tags:
         - dawarich
+        - containers
+
+    - role: cypht
+      tags:
+        - cypht
         - containers
