--- a/roles/snapraid/tasks/install_snapraid.yml
+++ b/roles/snapraid/tasks/install_snapraid.yml
@@ -11,7 +11,8 @@
 
     - name: Set snapraid_installed_version
       ansible.builtin.set_fact:
-        snapraid_installed_version: "{{ (snapraid_installed_version_output.stdout | regex_search('([0-9]+\\.[0-9]+(?:\\.[0-9]+)?)', '\\1')) | first if snapraid_installed_version_output.rc == 0 else '0' }}"
+        snapraid_installed_version: "{{ (snapraid_installed_version_output.stdout | regex_search('([0-9]+\\.[0-9]+(?:\\.[0-9]+)?)', '\\1')) | first
+          if snapraid_installed_version_output.rc == 0 else '0' }}"
 
 - name: Get latest release information from GitHub for SnapRAID
   block:
@@ -78,11 +79,11 @@
 
     - name: Set SnapRAID executable path (1)
       ansible.builtin.command: "which snapraid"
-      register: which_snapraid
+      register: snapraid_which_command
 
     - name: Set SnapRAID executable path (2)
       ansible.builtin.set_fact:
-        snapraid_executable: "{{ which_snapraid.stdout }}"
+        snapraid_executable: "{{ snapraid_which_command.stdout }}"
 
     - name: Display SnapRAID executable path
       ansible.builtin.debug:
