--- a/roles/uptime_kuma/tasks/network.yml
+++ b/roles/uptime_kuma/tasks/network.yml
@@ -1,8 +1,8 @@
 ---
 - name: Get infos on Swag container
   community.docker.docker_container_info:
-    name: "{{ swag_container_name  }}"
-  register: swag_info
+    name: "{{ swag_container_name }}"
+  register: swag_info  # noqa var-naming[no-role-prefix]
 
 - name: Create a docker network
   community.docker.docker_network:
